# psych-system

./: README.md  package-lock.json  package.json
enc_temp_folder/b7e2e1fd27187c5e28af97e6ffc725f/: server.js
psych-counseling/: psych-counseling.sln  psych-counseling.vcxproj  psych-counseling.vcxproj.filters  script.js  style.css
psych-counseling/psyconsultation/: CMakeLists.txt  CMakeSettings.json  package-lock.json  package.json  server.js
psych-counseling/psyconsultation/public/: admin.html  adminAnnouncements.html  adminApplications.html  adminArticles.html  adminLogin.html  adminMessages.html  adminQuotes.html  applyDoctor.html  appointment.html  article.html  articles.html  chat.html  doctorDashboard.html  doctorList.html  index.html  login.html  messageWall.html  register.html  userAppointments.html
psych-counseling/psyconsultation/src/: chat_server.cpp  chat_server.hpp  chat_session.cpp  chat_session.hpp  main.cpp
psych-counseling/psyconsultation/test/: login.test.js
